docs/dev_versioned_docs/version-0.0.2/ci-cd/index.mdx
---
title: CI/CD Workflows
sidebar_position: 6
---

# CI/CD Workflows

This section describes the Continuous Integration and Continuous Deployment (CI/CD) workflows used in the Slack MCP Server project.

## 🚀 **Quick Navigation**

Our CI/CD system is organized into focused, developer-friendly sections:

### **📋 [Continuous Integration](/dev/next/ci-cd/continuous-integration)**

[![CI](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/ci.yaml/badge.svg)](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/ci.yaml)
[![CI + E2E](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/ci_includes_e2e_test.yaml/badge.svg)](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/ci_includes_e2e_test.yaml)

- **CI workflow triggers and structure**  
- **Multi-Python version testing**
- **Code quality checks and coverage reporting**
- **Test automation and validation**

### **🔄 [Release System](/dev/next/ci-cd/release-system)**

[![Release Validation](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/release-validate.yml/badge.svg)](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/release-validate.yml)
[![Release](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/release.yml/badge.svg)](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/release.yml)
[![Release Staging](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/release-staging.yml/badge.svg)](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/release-staging.yml)

- **Production, validation, and staging releases**
- **Multi-artifact deployment (Python, Docker, Docs)**
- **Release intent configuration and supply chain security**
- **Git synchronization fixes and version management**

### **📖 [Documentation Deployment](/dev/next/ci-cd/documentation-deployment)**  

[![Documentation](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/documentation.yaml/badge.svg)](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/documentation.yaml)

- **Advanced workflow_run trigger pattern**
- **Intelligent documentation triggering with DOCS_UPDATED flags**
- **Dual-trigger architecture solving GitHub Actions limitations**
- **Guard job logic and troubleshooting**

### **🔧 [Reusable Workflows](/dev/next/ci-cd/reusable-workflows)**
- **Docker, Python, and documentation operations**
- **Workflow integration patterns and architecture**
- **Standardized operations and DRY principles**

### **🔍 [PEP 561 Type Distribution](/dev/next/ci-cd/type-checking-workflow)**

[![PEP 561 Type Distribution](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/type-check.yml/badge.svg)](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/type-check.yml)

- **PEP 561 compliance validation** - Ensures proper type information packaging
- **Type distribution verification** - Validates `py.typed` marker and type file inclusion
- **Type import testing** - Confirms type definitions are accessible after installation
- **Modern PEP 695 syntax** - Uses Python 3.12+ `type` statement for type aliases

:::info MyPy Type Checking
MyPy source code checking is handled by **pre-commit hooks**. This workflow focuses on **PEP 561 compliance** for type distribution.
:::

### **⚙️ [Additional CI Workflows](/dev/next/ci-cd/additional-ci-workflows)**

[![Validate Slack Event Types](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/validate_slack_event_types.yml/badge.svg)](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/validate_slack_event_types.yml)
[![Docker CI](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/docker-ci.yml/badge.svg)](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/docker-ci.yml)
[![DockerHub README CI](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/dockerhub-readme-ci.yml/badge.svg)](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/dockerhub-readme-ci.yml)
[![Documentation Build Check](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/docs-build-check.yaml/badge.svg)](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/docs-build-check.yaml)
[![Docs Auto-Merge](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/docs-automerge.yml/badge.svg)](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/docs-automerge.yml)

- **Slack Event Types Validation** - Automated validation of SlackEvent enum synchronization
- **Docker CI** - Container building and testing workflows  
- **DockerHub README CI** - Repository description synchronization
- **Documentation Build Check** - Validates documentation builds on PRs and branch changes
- **Documentation Auto-Approve & Auto-Merge** - Streamlined docs updates

### **🛠️ [Developer Guide](/dev/next/ci-cd/developer-guide)**
- **Configuration and troubleshooting**
- **Best practices for contributors**
- **Common workflows and monitoring**
- **Additional specialized workflows**

---

## 🎯 **CI/CD Overview**

We use **GitHub Actions** to automate testing, code quality checks, and deployment processes. Our CI/CD pipelines help maintain code quality, ensure tests pass, and streamline the release process.

**Monitor all workflows at:** [GitHub Actions Dashboard](https://github.com/Chisanan232/slack-mcp-server/actions)

### **System Highlights**

✅ **Comprehensive CI**: Multi-Python testing, code quality, coverage reporting  
✅ **Intelligent Releases**: Intent-based configuration with supply chain security  
✅ **Advanced Documentation**: workflow_run pattern with DOCS_UPDATED flag logic  
✅ **Type Distribution**: PEP 561 compliance with modern PEP 695 type aliases  
✅ **Reusable Architecture**: DRY workflows with standardized operations  
✅ **Developer-Friendly**: Extensive validation, staging, and troubleshooting guidance  

---

## 🎯 **Getting Started**

**New to our CI/CD system?** Start with:

1. **📋 [Continuous Integration](/dev/next/ci-cd/continuous-integration)** - Understand our testing and quality workflows
2. **🔄 [Release System](/dev/next/ci-cd/release-system)** - Learn about our release process and configuration
3. **🛠️ [Developer Guide](/dev/next/ci-cd/developer-guide)** - Find practical examples and troubleshooting tips

**Need specific information?**
- **Configuring releases:** → [Release System](/dev/next/ci-cd/release-system)
- **Documentation not deploying:** → [Documentation Deployment](/dev/next/ci-cd/documentation-deployment)  
- **Type checking and PEP 561:** → [PEP 561 Type Distribution](/dev/next/ci-cd/type-checking-workflow)
- **Understanding workflow patterns:** → [Reusable Workflows](/dev/next/ci-cd/reusable-workflows)
- **Troubleshooting issues:** → [Developer Guide](/dev/next/ci-cd/developer-guide)
